# rustyhues

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: env.rs  lib.rs  output.rs  paint.rs  stream.rs  style.rs  windows.rs
tests/: bg-colors.rs  custom-colors.rs  decorations.rs  fg-colors.rs  general.rs
