[package]
name = "rustyhues"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
] }
